--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "bleno": "^0.4.2",
     "express": "^4.15.3",
+    "noble": "^1.8.1",
     "node": "0.0.0"
   },
   "devDependencies": {},
