--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "bleno": "^0.4.2",
     "express": "^4.15.3",
+    "global": "^4.3.2",
     "noble": "^1.8.1",
     "noble-device": "^1.4.1",
     "node": "0.0.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel index.js -o compiled.js"
   },
   "repository": {
     "type": "git",
