--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "async": "^2.4.0",
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "bleno": "^0.4.2",
@@ -17,7 +18,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel index.js -o compiled.js"
+    "build": "babel index.js -o compiled.js",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
