--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel index.js -o compiled.js",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
   },
   "repository": {
     "type": "git",
