--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel index.js -o compiled.js",
     "start": "nodemon index.js",
-    "http": "http-server"
+    "http": "http-server",
+    "server": "babel-node index.js"
     
   },
   "repository": {
